--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "uglify-es": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony",
     "webpack": "^3.3.0"
   },
